force-app/main/default/objects/Professional_Service_Estimate__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Scope for R&amp;A</description>
    <label>Scope</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Scope</fullName>
                <default>true</default>
                <label>Limited Scope</label>
            </value>
            <value>
                <fullName>Distributed Scope</fullName>
            </value>
            <value>
                <fullName>Full Modernization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>