force-app/main/default/objects/Professional_Service_Estimate__c/fields/Stipend_Amount__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stipend Amount</description>
    <label>Stipend Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>