force-app/main/default/objects/Professional_Service_Estimate__c/fields/Stipend_Percentage_Unadjusted__c.field-meta.xml
<CustomField>
    <fullName>Stipend_Percentage_Unadjusted__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Stipend Percentage Unadjusted</description>
    <label>Stipend Percentage Unadjusted</label>
    <precision>10</precision>
    <scale>7</scale>
    <type>Percent</type>
</CustomField>