force-app/main/default/objects/Professional_Service_Estimate__c/fields/Time_until_Midpoint_of_Const_years__c.field-meta.xml
<CustomField>
    <fullName>Time_until_Midpoint_of_Const_years__c</fullName>
    <description>Time until Midpoint of Const</description>
    <formula>(( 
 DATETIMEVALUE(Anticipated_Start_Date_of_Construction__c) +
    IF(Text( Project_Type__c ) == &apos;New Construction&apos;,
      ( (New_Construction_Duration__c * 365 ) / 2) 
    ,
      ( (Total_R_A_Construction_Duration_years__c * 365 ) / 2) 
    )
)
- DATETIMEVALUE( Base_Date_of_Estimate__c )
) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time until Midpoint of Const (years)</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>