force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_AE__c.field-meta.xml
<CustomField>
    <fullName>Total_AE__c</fullName>
    <formula>Design_AE__c +  Design_CM_as_Agent_and_CM_as_Constructor__c +  Design_CMx__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Design Phase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>