force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Const_CM_Agent_CM_Const_Perc__c.field-meta.xml
<CustomField>
    <fullName>Total_Const_CM_Agent_CM_Const_Perc__c</fullName>
    <formula>Construction_AE_Percent__c +  Construction_Cx_Percent__c +  Construction_CM_as_Agent_CM_as_Const__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CM %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>