force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Construction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Construction_Amount__c</fullName>
    <formula>Construction_AE__c +  Construction__c +  Construction_Cx__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Construction Phase Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>