force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Construction_w_GSA_CM__c.field-meta.xml
<CustomField>
    <fullName>Total_Construction_w_GSA_CM__c</fullName>
    <formula>Total_Const_CM_Agent_CM_Const_Perc__c +  GSA_CM_Construction__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Construction (w/ GSA CM) %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>