force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Construction_w_GSA_CM_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Construction_w_GSA_CM_Fee__c</fullName>
    <formula>Total_Construction_Amount__c +  GSA_CM_Construction_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Construction (w/ GSA CM) Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>