force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Cx__c.field-meta.xml
<CustomField>
    <fullName>Total_Cx__c</fullName>
    <formula>Design_CMx__c +  Construction_Cx__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cx</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>