force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Cx_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Cx_Percent__c</fullName>
    <formula>Design_Cx_Percent__c + Construction_Cx_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cx %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>