force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Design_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Design_Percent__c</fullName>
    <formula>Design_AE_Percent__c +  Design_CM_as_Agent_and_CM_as_Const__c  +  Design_Cx_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Design %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>