force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Design_w_GSA_CM__c.field-meta.xml
<CustomField>
    <fullName>Total_Design_w_GSA_CM__c</fullName>
    <formula>Total_Design_Percent__c +  GSA_CM_Design__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Design (w/ GSA CM) %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>