force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Percent__c</fullName>
    <formula>Total_AE_Percent__c +  Total_Const_CM_Agent_CM_Const_Perc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>