force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_R_A_Construction_Duration_years__c.field-meta.xml
<CustomField>
    <fullName>Total_R_A_Construction_Duration_years__c</fullName>
    <description>Total R&amp;A Construction Duration in years</description>
    <label>Total R&amp;A Construction Duration (years)</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>