force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_w_GSA_CM__c.field-meta.xml
<CustomField>
    <fullName>Total_w_GSA_CM__c</fullName>
    <formula>Total_Design_w_GSA_CM__c +  Total_Construction_w_GSA_CM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (w/ GSA CM) %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>