force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_w_GSA_CM_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_w_GSA_CM_Amount__c</fullName>
    <formula>Total_w_GSA_CM_Fee__c +  Total_Construction_w_GSA_CM_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (w/ GSA CM) Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>