force-app/main/default/objects/Professional_Service_Estimate__c/fields/Total_w_GSA_CM_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_w_GSA_CM_Fee__c</fullName>
    <formula>Total_AE__c +  GSA_CM_Design_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Design (w/ GSA CM) Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>