force-app/main/default/objects/Professional_Service_Estimate__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <description>Default Professional Service Estimate</description>
    <label>Default</label>
</RecordType>