force-app/main/default/objects/Professional_Service_Estimate__c/recordTypes/Default_R_A.recordType-meta.xml
<RecordType>
    <fullName>Default_R_A</fullName>
    <active>true</active>
    <description>Default Repair and Alteration record type.</description>
    <label>Default Repair and Alteration</label>
</RecordType>