force-app/main/default/objects/Professional_Service_Estimate__c/recordTypes/User_Defined.recordType-meta.xml
<RecordType>
    <fullName>User_Defined</fullName>
    <active>true</active>
    <description>User Defined Professional Service Estimate</description>
    <label>User Defined</label>
</RecordType>