force-app/main/default/objects/Professional_Service_Estimate__c/recordTypes/User_Defined_R_A.recordType-meta.xml
<RecordType>
    <fullName>User_Defined_R_A</fullName>
    <active>true</active>
    <description>User Defined Professional Service Estimate - R&amp;A</description>
    <label>User Defined Repair and Alteration</label>
</RecordType>