force-app/main/default/objects/Professional_Service_Estimate__c/validationRules/Check_for_Approval_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Approval_Process</fullName>
    <active>true</active>
    <description>If project record is submitted for approval, then it should be locked from editing.</description>
    <errorConditionFormula>(NCMT_Project__r.IsApprovalProcess__c == True &amp;&amp;  TEXT(NCMT_Project__r.Project_Status__c) != &apos;Draft&apos;)</errorConditionFormula>
    <errorMessage>The record you are trying to edit has been locked.</errorMessage>
</ValidationRule>