force-app/main/default/objects/Professional_Service_Estimate__c/validationRules/User_creates_ProfServEst_for_own_Region.validationRule-meta.xml
<ValidationRule>
    <fullName>User_creates_ProfServEst_for_own_Region</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
   OR(
    Text($User.NCMT_User_Level__c) = &apos;Level IV&apos;,
    Text($User.NCMT_User_Level__c) = &apos;Level V&apos;,
    Text($User.NCMT_UserRegionCode__c) = &apos;CO&apos;,
   Text(Region_Code__c)= Text($User.NCMT_UserRegionCode__c),
    $Profile.Name = &apos;GSA System Administrator&apos;
   )
)</errorConditionFormula>
    <errorDisplayField>State__c</errorDisplayField>
    <errorMessage>Insufficient access to create professional service estimate in other Regions.</errorMessage>
</ValidationRule>