force-app/main/default/objects/Professional_Service_Estimate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Anticipated_Date_of_Design_Award__c</columns>
    <columns>Anticipated_Start_Date_of_Construction__c</columns>
    <columns>CM_Role__c</columns>
    <columns>Delivery_Method__c</columns>
    <columns>ECC__c</columns>
    <columns>Estimated_Total_GSF__c</columns>
    <columns>State__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Total_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>